Add direct ElevenLabs voice agent, scripted demo flow, and HR simulation
- ElevenLabsManager: direct WebSocket to ElevenLabs ConvAI (no server relay),
  scripted demo sends pre-written user message after agent greeting
- HealthKitManager: demo HR simulation (resting 58 → rising 95 → declining)
- EpisodeManager: auto-flow calming (30s) → calming music (25s) → resolved
- HeartRatePill: compact HR display on every phase overlay screen
- ContentView: "Start" button appears when HR elevated, HR pills on all overlays
- Removed mic input code (no longer needed for scripted demo)

--- a/apps/watch/Pulsera Watch/Info.plist
+++ b/apps/watch/Pulsera Watch/Info.plist
@@ -22,6 +22,8 @@
 	<string>Pulsera needs access to your heart rate and heart rate variability data to monitor your safety in real time and alert your community if anomalies are detected.</string>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>Pulsera records health metrics to provide continuous safety monitoring and anomaly detection for your community group.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Pulsera uses the microphone so you can talk to the calming voice assistant during breathing exercises.</string>
 	<key>WKApplication</key>
 	<true/>
 	<key>WKWatchOnly</key>
