--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,9 +14,11 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.1.0",
     "expo": "~54.0.30",
+    "expo-blur": "~15.0.8",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.18",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
     "expo-status-bar": "~3.0.8",
