--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,6 +16,7 @@
     "expo": "~54.0.30",
     "expo-blur": "~15.0.8",
     "expo-build-properties": "~1.0.9",
+    "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.18",
     "expo-linear-gradient": "~15.0.8",
